added terminal launcher for linux